<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background_first">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="45dp"
        android:paddingLeft="30dp"
        android:text="@string/locations_here"
        android:verticalScrollbarPosition="defaultPosition" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1">
        <EditText
            android:id="@+id/locationEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:elevation="5dp"
            android:background="@drawable/edit_text_border"
            />
        <Button
            android:id="@+id/locationButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="4"
            android:background="@drawable/button_border"
            android:text="OK"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7"
        android:background="@drawable/background_second">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <Switch
                android:id="@+id/permissionGPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:textSize="@dimen/text_size_info"
                android:layout_weight="1"
                android:elevation="5dp"
                android:text="@string/permission_gps"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/switch_border" />
            <Switch
                android:id="@+id/turnOnGPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:textSize="@dimen/text_size_info"
                android:layout_weight="1"
                android:elevation="5dp"
                android:text="@string/turn_on_gps"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/switch_border"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">
            <Button
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_border"
                android:text="@string/start"
                android:textSize="@dimen/text_size_info"
                android:textColor="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/finishButton"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_border"
                android:text="@string/finish"
                android:textSize="@dimen/text_size_info"
                android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>
        <Chronometer
            android:id="@+id/chronometer"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="40dip"
            />
    </LinearLayout>



</LinearLayout>